OO-3934: migrate metadata and thumbnails to the DB